Image improvements - Rework the lightbox to be shared by all images. There's no way to get a nice lightbox experience without code, so might as well trim the fat and use a single element and swap out the image as needed. I tried using an iframe for this, thinking they supported pinch-to-zoom independently from the page. That ended up not being true and they are super fussy when it comes to the background color so I decided against using them. - Rework how history works. Opening the lightbox pushes into the history and  closing it pop. This means you can use the back button, but we don't ended up bloating the history. - Ids are now on the image embedded in the page instead of the lightbox. The lightbox is automatically initialized when the hash/target is an image. Together, this means linking to images works even with javascript is disabled, it just won't open the lightbox, which is fine. - Allow remote images to be resized and hosted locally. Currently they go into page directory and aren't shared between pages. I'm assuming resizing the same remote image onto multiple pages is unlikely. - Restore focus when closing the lightbox. You can now press enter multiple times and have focus maintained in an intuitive way. - Append a counter to image ids to ensure they are unique. This ensure focus moves to the correct element when closing the lightbox and links point to the correct instance of an image when there are multiple. - Added a test for a very high resolution image. Mobile browsers will show additional detail when zooming as opposed to locking the resolution to the size on the un-zoomed page. - Moved some image related styling out of code and into CSS. - Show zoom-out cursor on lightbox. - Hide overflow so the fade-in animation looks better.
Don't hyphenate the error text for comments. It looks slightly night without it.

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -40,7 +40,7 @@ button, textarea {
 	--dark-text-shadow:   #000000a0;
 	--dark-outline:       #404040;
 	--dark-scrollbar:     #767676;
-	--dark-lightbox:      #212121dd;
+	--dark-lightbox:      #212121ee;
 
 	--light-background:    #bdbdbd;
 	--light-background-2:  #b8b8b8;
@@ -54,7 +54,7 @@ button, textarea {
 	--light-text-shadow:   #00000020;
 	--light-outline:       #404040;
 	--light-scrollbar:     #808080;
-	--light-lightbox:      #bdbdbddd;
+	--light-lightbox:      #bdbdbdee;
 
 	--code-background:           #101010;
 	--code-line-numbers:         #424242;
@@ -205,6 +205,12 @@ body {
 	overflow-wrap: break-word;
 	text-align: justify;
 	text-shadow: 1px 1px 6px var(--text-shadow);
+}
+
+body.inactive {
+	height: 100%;
+	overflow: hidden;
+	user-select: none;
 }
 
 body > footer {
@@ -740,6 +746,7 @@ code, annotation {
 	border-width: 1px;
 	display: flex;
 	font-size: 20px;
+	hyphens: none;
 	margin: 0;
 	text-align: center;
 }
@@ -1201,6 +1208,10 @@ img {
 	justify-content: space-evenly;
 }
 
+img.use-lightbox {
+	cursor: zoom-in;
+}
+
 img::before {
 	color: var(--error);
 }
@@ -1210,6 +1221,7 @@ img::before {
 	display: block;
 	margin: 20px auto;
 	max-width: 100%;
+	overflow: hidden;
 	width: fit-content;
 }
 
@@ -1227,7 +1239,7 @@ img::before {
 	height: auto;
 }
 
-.lightbox-background {
+#lightbox {
 	bottom: 0;
 	left: 0;
 	position: fixed;
@@ -1235,7 +1247,8 @@ img::before {
 	top: 0;
 	z-index: 10;
 
-	background: var(--lightbox);
+	background-color: var(--lightbox);
+	cursor: zoom-out;
 	display: flex;
 	margin: 0;
 	overflow: auto;
@@ -1247,14 +1260,14 @@ img::before {
 	transition-duration: 200ms;
 }
 
-.lightbox-background:target:not(.inactive),
-.lightbox-background.active {
+#lightbox:target:not(.inactive),
+#lightbox.active {
 	scale: 100%;
 	opacity: 100%;
 	visibility: visible;
 }
 
-.lightbox-background.active img {
+#lightbox img {
 	margin: auto;
 	height: auto;
 	width: auto;
